--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "install": "^0.13.0",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.3.0",
     "node-sass": "^7.0.1",
     "npm": "^8.7.0",
     "react": "17.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "17.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
